--- a/app/src/main/res/layout/fragment_add_contact.xml
+++ b/app/src/main/res/layout/fragment_add_contact.xml
@@ -8,60 +8,59 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <android.support.design.widget.TextInputLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tiName">
-            <android.support.design.widget.TextInputEditText
+            android:layout_height="match_parent">
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tiName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Name" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tiNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/etName"
-                android:hint="Name"/>
-        </android.support.design.widget.TextInputLayout>
+                android:layout_below="@+id/tiName">
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tiNumber"
-            android:layout_below="@+id/tiName">
-            <android.support.design.widget.TextInputEditText
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Contact number"
+                    android:inputType="phone" />
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/btnLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/etNumber"
-                android:hint="Contact number"/>
-        </android.support.design.widget.TextInputLayout>
+                android:layout_below="@+id/tiNumber"
+                android:text="Select Location" />
 
-        <!--<com.google.android.gms.maps.MapView-->
-            <!--android:id="@+id/mapView"-->
-            <!--android:layout_below="@+id/tiNumber"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="300dp"-->
-            <!--android:clickable="true"/>-->
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Select Location"
-            android:id="@+id/btnLocation"
-            android:layout_below="@+id/tiNumber"/>
-        <fragment
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:id="@+id/g_map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_below="@+id/btnLocation"/>
+            <fragment
+                android:id="@+id/g_map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_below="@+id/btnLocation" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnSave"
-            android:layout_below="@+id/g_map"
-            android:text="Save"
-            android:layout_alignParentBottom="true"/>
+            <Button
+                android:id="@+id/btnSave"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/g_map"
+                android:text="Save" />
 
-    </RelativeLayout>
-</ScrollView>
+        </RelativeLayout>
+    </ScrollView>
 </FrameLayout>
